--- a/css/main.css
+++ b/css/main.css
@@ -11,6 +11,7 @@ a, body {
 .side-bar {
     float: left;
     width: 20%;
+    position: fixed;
 }
 .side-bar > * {
     padding: 10px 15px;
@@ -42,26 +43,30 @@ a, body {
     margin-bottom: 10px;
     line-height: 1;
 }
-.article-list {
+.article-list,
+.article{
     background: #fff;
     margin-right: 30%;
     padding: 20px 30px;
     box-shadow: 0 0 3px 2px rgba(0, 0, 0, .2);
 }
-.article-list .item .title {
+.article-list .item .title,
+.article .title {
     font-size: 22px;
     font-weight: 700;
 }
 
-.article-list .item .status {
+.article-list .item .status,
+.article .status {
     font-size: 13px;
     font-weight: 700;
     color: #ccc;
 }
-.article-list .item > * {
+.article-list .item > * 
+.article > * {
     margin: 10px 0px;
 }
 
-.article-list .item {
+.article-list .item, {
     margin-bottom: 25px;
 }
